// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtEvidenceTag components should render ProtVista evidence tag 1`] = `
Array [
  TemplateResult {
    "processor": DefaultTemplateProcessor {},
    "strings": Array [
      "
        <span
          class=",
      "
          @click=",
      "
        >
          ",
      "
          ",
      "</span
        >
      ",
    ],
    "type": "html",
    "values": Array [
      "evidence-tag svg-colour-unreviewed",
      [Function],
      [Function],
      "Imported",
    ],
  },
]
`;

exports[`UniProtEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      Imported
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion inferred from database entries
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <a
        href="//prosite.expasy.org/unirule/PRU10023"
      >
        PRU10023
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      2 publications
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Manual assertion based on experiment
      </h5>
    </div>
  </div>
</DocumentFragment>
`;
